Bug Fixes - Cameron James fixed some more null pointer exceptions on import of some models, also updated the maven build to try and get the site working (would like to start publishing it) also tested that similarity search works, UI doesn't.