@@ -12,6 +12,7 @@
 
     <modules>
         <!-- Tools -->
+        <module>build-tools</module>
         <module>test-tools</module>
 
         <!-- Schema's -->
@@ -48,6 +49,14 @@
             <name>EclipseLink Repo</name>
         </repository>
     </repositories>
+
+
+    <distributionManagement>
+        <site>
+            <id>${project.artifactId}-site</id>
+            <url>${project.basedir}/target/staging/</url>
+        </site>
+    </distributionManagement>
 
 
     <build>
@@ -223,7 +232,26 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>${maven.site.plugin}</version>
                 <configuration>
+                    <stagingDirectory>${project.basedir}/target/staging</stagingDirectory>
                     <reportPlugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>${maven.project.info.reports.plugin}</version>
+                            <reports>
+                                <report>index</report>
+                                <report>project-team</report>
+                                <report>license</report>
+                                <report>mailing-list</report>
+                                <report>dependencies</report>
+                                <report>dependency-convergence</report>
+                                <report>plugin-management</report>
+                                <report>cim</report>
+                                <report>issue-tracking</report>
+                                <report>scm</report>
+                                <report>summary</report>
+                            </reports>
+                        </plugin>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-report-plugin</artifactId>
@@ -239,26 +267,11 @@
                             <configuration>
                                 <aggregate>true</aggregate>
                             </configuration>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>org.apache.ant</groupId>
-                                    <artifactId>ant</artifactId>
-                                    <version>${ant.version}</version>
-                                </dependency>
-                            </dependencies>
                         </plugin>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-checkstyle-plugin</artifactId>
                             <version>${maven.checkstyle.plugin}</version>
-                            <executions>
-                                <execution>
-                                    <phase>verify</phase>
-                                    <goals>
-                                        <goal>check</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
                             <configuration>
                                 <aggregate>true</aggregate>
                                 <configLocation>${checkstyle.config.location}</configLocation>
@@ -305,40 +318,41 @@
                                     <haltOnFailure>${cobertura.halt-on-failure}</haltOnFailure>
                                 </check>
                             </configuration>
-                            <executions>
-                                <execution>
-                                    <goals>
-                                        <goal>clean</goal>
-                                        <goal>check</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
                         </plugin>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-pmd-plugin</artifactId>
                             <version>${maven.pmd.plugin}</version>
-                            <inherited>true</inherited>
                             <configuration>
+                                <linkXref>true</linkXref>
                                 <rulesets>
                                     <ruleset>/rulesets/basic.xml</ruleset>
                                     <ruleset>/rulesets/controversial.xml</ruleset>
                                 </rulesets>
                                 <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
                                 <minimumTokens>100</minimumTokens>
-                                <targetJdk>${java.version}</targetJdk>
+                                <minimumPriority>3</minimumPriority>
+                                <targetJdk>${java.target.version}</targetJdk>
                             </configuration>
                         </plugin>
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>findbugs-maven-plugin</artifactId>
                             <version>${maven.findbugs.plugin}</version>
+                            <configuration>
+                                <argLine>-Xmx512m</argLine>
+                                <argLine>-XX:MaxPermSize=512m</argLine>
+                            </configuration>
                         </plugin>
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>taglist-maven-plugin</artifactId>
                             <version>${maven.taglist.plugin}</version>
-                            <inherited>true</inherited>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>jdepend-maven-plugin</artifactId>
+                            <version>2.0-beta-2</version>
                         </plugin>
                     </reportPlugins>
                     <locales>en</locales>
@@ -1201,10 +1215,10 @@
         <maven.jxr.plugin>2.3</maven.jxr.plugin>
         <maven.plugin.plugin>3.1</maven.plugin.plugin>
         <maven.pmd.plugin>2.7.1</maven.pmd.plugin>
-        <maven.project.info.reports.plugin>2.5.1</maven.project.info.reports.plugin>
+        <maven.project.info.reports.plugin>2.6</maven.project.info.reports.plugin>
         <maven.release.plugin>2.3.2</maven.release.plugin>
         <maven.resources.plugin>2.6</maven.resources.plugin>
-        <maven.site.plugin>3.1</maven.site.plugin>
+        <maven.site.plugin>3.0</maven.site.plugin>
         <maven.sonar.plugin>3.2</maven.sonar.plugin>
         <maven.source.plugin>2.2.1</maven.source.plugin>
         <maven.surefire.plugin>2.12.3</maven.surefire.plugin>
